# BookingLink-to-EmailText

./: .gitignore  app.py  driver_pool.py  main.py  pyproject.toml  scraper.py  shell.nix  test_scraper.py
static/css/: custom.css
static/js/: main.js
templates/: index.html
