[project]
name = "bookinglink-to-emailtext"
version = "0.1.0"
description = "A tool to scrape calendar availability and convert to email text"
dependencies = [
    "flask>=3.0.0",
    "selenium>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
    "gunicorn>=21.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
